--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-responsive": "^10.0.1",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "sitemap": "^8.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
