--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
     "sitemap": "^8.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workbox-core": "^7.3.0",
+    "workbox-precaching": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
